# BFS-rust

./: Cargo.toml  README.md
1_hello_rust/src/: enums.rs  generics.rs  main.rs  structs.rs  traits.rs
1_hello_rust/src/enums/: simple_socket.rs
2_borrow_my_heart/: Cargo.toml
2_borrow_my_heart/src/: lifetimes.rs  main.rs  smart_pointers.rs
3_parallel_work/: Cargo.toml
3_parallel_work/src/: main.rs
4_iterators_and_closures/: Cargo.toml
4_iterators_and_closures/src/: main.rs
5_hangman/: Cargo.toml  README.md
5_hangman/src/: main.rs  renderer.rs
5_hangman/src/game/: state.rs
5_to_the_moon/: Cargo.toml  README.md
5_to_the_moon/src/: main.rs  simulation.rs
5_to_the_moon/src/ship_components/: fuel_tanks.rs  launch_pad.rs  mod.rs  ship.rs  thrusters.rs
6_server/: Cargo.toml  diesel.toml
6_server/migrations/2024-06-25-064139_create_users/: up.sql
6_server/migrations/2024-06-25-064741_create_posts/: up.sql
6_server/migrations/2024-06-26-073133_create_realtion/: down.sql  up.sql
6_server/src/: config.rs  main.rs  services.rs
6_server/src/data/: data_errors.rs  mod.rs  repo_trait.rs
6_server/src/data/db/: db_error.rs  mod.rs  postgres.rs  posts_db.rs  schema.rs  users_db.rs
6_server/src/data/repositories/: post_repository.rs  user_repository.rs
6_server/src/models/: post.rs  user.rs
6_server/src/server/: app.rs  error_handlers.rs  mod.rs  state.rs
6_server/src/server/handlers/: mod.rs  post_handlers.rs  user_handlers.rs
6_server/src/server/middlewares/: tracing.rs
6_server/src/server/routers/: mod.rs  post_router.rs  user_router.rs
(+2 files in other folders)
