[package]
name = "blog_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15"
uuid = { version = "1.9.0", features = ["serde", "v4"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
thiserror = "1.0.61"
email_address = "0.2.4"
nutype = { version = "0.4.2", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "r2d2"] }
r2d2 = "0.8.10"
envconfig = "0.10.0"

[dev-dependencies]
axum-macros = "0.4.1"
mockall = "0.12.1"
